--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "homepage": "https://github.com/BBoughton84/express_server_3#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "knex": "^0.12.9",
-    "node": "0.0.0",
     "nodemon": "^1.11.0",
     "pg": "^6.1.5"
   }
